# development

./: README.md
TemplateAlanLatte/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  yoyo.ini
TemplateAlanLatte/app/: __init__.py
TemplateAlanLatte/app/configuration/: __init__.py
TemplateAlanLatte/app/internal/pkg/middlewares/: fake_auth.py  handle_http_exceptions.py  token_based_verification.py
TemplateAlanLatte/app/internal/repository/: __init__.py  repository.py
TemplateAlanLatte/app/internal/repository/postgresql/: __init__.py  connection.py  task.py
TemplateAlanLatte/app/internal/routes/: __init__.py  task.py
TemplateAlanLatte/app/internal/services/: __init__.py  task.py
TemplateAlanLatte/app/pkg/connectors/: resources.py
TemplateAlanLatte/app/pkg/handlers/: recursive_attr.py
TemplateAlanLatte/app/pkg/logger/: logger.py
TemplateAlanLatte/app/pkg/models/: __init__.py
TemplateAlanLatte/app/pkg/models/app/: task.py
TemplateAlanLatte/app/pkg/models/base/: exception.py  model.py
TemplateAlanLatte/app/pkg/settings/: settings.py
TemplateAlanLatte/docker/api/: Dockerfile
TemplateAlanLatte/docker/grafana/: Dockerfile
TemplateAlanLatte/docker/migrations/: Dockerfile
TemplateAlanLatte/docker/postgresql/: Dockerfile
TemplateAlanLatte/docker/prometheus/: Dockerfile  prometheus.yml
TemplateAlanLatte/migrations/: 001-create_tasks.py
task-manager_no_template/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
task-manager_no_template/app/: .env  crud.py  database.py  main.py  models.py
(+10 files in other folders)
